// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateToolsRoute > snapshot — no auth 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { convertToModelMessages, stepCountIs, streamText } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { myToolTools } from '@/lib/tools/my-tool.tools'

// Allow streaming responses up to 30 seconds
export const maxDuration = 30

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '@/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { messages } = await req.json()

  try {
    const result = streamText({
      model: anthropic("claude-opus-4-5"),
      tools: myToolTools,
      stopWhen: stepCountIs(5),
      messages: await convertToModelMessages(messages),
      // onStepFinish: async ({ stepType, toolCalls, toolResults }) => {
      //   console.log({ stepType, toolCalls, toolResults })
      // },
    })
    return result.toUIMessageStreamResponse()
  } catch {
    return Response.json({ error: 'Internal server error' }, { status: 500 })
  }
}
"
`;

exports[`generateToolsStub > snapshot — custom searchWeb 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { tool } from 'ai'
import { z } from 'zod'

export const searchWebTools = {
  searchWeb: tool({
    description: 'TODO: describe what this tool does',
    inputSchema: z.object({
      input: z.string().describe("TODO: replace with your parameter"),
      // Add more parameters here
    }),
    async execute(_args) {
      // TODO: implement searchWeb
      return { result: 'not implemented' }
    },
  }),
}
"
`;

exports[`generateToolsStub > snapshot — default myTool 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { tool } from 'ai'
import { z } from 'zod'

export const myToolTools = {
  myTool: tool({
    description: 'TODO: describe what this tool does',
    inputSchema: z.object({
      input: z.string().describe("TODO: replace with your parameter"),
      // Add more parameters here
    }),
    async execute(_args) {
      // TODO: implement myTool
      return { result: 'not implemented' }
    },
  }),
}
"
`;
